--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/black"
+    tools:context=".activities.DetailActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <FrameLayout
@@ -18,9 +22,9 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/iv_detail"
+                    android:id="@+id/iv_details"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:adjustViewBounds="true"
                     android:scaleType="fitXY"
                     android:src="@drawable/im_movie" />
@@ -34,14 +38,12 @@
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:src="@drawable/ic_play" />
-
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:gravity="center_vertical">
-
 
                     <ImageView
                         android:id="@+id/iv_close"
@@ -72,16 +74,14 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/tv_type"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Type"
                             android:textColor="#FFA500"
                             android:textSize="15sp" />
-
                     </LinearLayout>
-
                 </LinearLayout>
-
             </FrameLayout>
 
             <androidx.recyclerview.widget.RecyclerView
@@ -90,29 +90,50 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/tv_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:textColor="@color/white"
-                android:textSize="18sp"
-                android:id="@+id/tv_detail"/>
+                android:textSize="18sp" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/black"
+                android:gravity="center"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seasons"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_episodes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </LinearLayout>
-
     </androidx.core.widget.NestedScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:padding="10dp">
 
         <ProgressBar
             android:id="@+id/pb_loading"
-            android:visibility="gone"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
+            android:layout_height="wrap_content"
+            android:visibility="visible" />
     </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
